--- a/expbuilder/CMakeLists.txt
+++ b/expbuilder/CMakeLists.txt
@@ -8,6 +8,9 @@ cmake_policy(SET CMP0020 NEW)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+
+set(Qt5Widgets_DIR "$ENV{QTDIR}\\qtbase\\lib\\cmake\\Qt5Widgets")
+
 find_package(Qt5Widgets 5.2 REQUIRED)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
