--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,13 +17,13 @@ file(TO_CMAKE_PATH $ENV{JSONCPP_DIR} jsoncpp_dir)
 
 include_directories(include ${gtest_dir}/include ${boost_dir} ${jsoncpp_dir})
 
-link_directories(${gtest_dir}/lib ${CMAKE_CURRENT_SOURCE_DIR}../../build)
+link_directories(${gtest_dir} ${CMAKE_CURRENT_SOURCE_DIR}../../build)
 
 #set(jsoncpp_source ${jsoncpp_dir}/jsoncpp.cpp)
 
 add_executable(imgexptest src/imgexptest.cpp)
 
-target_link_libraries(imgexptest gtest.lib gtest_main.lib)
+target_link_libraries(imgexptest libgtest.a libgtest_main.a)
 
 #uncomment when I start making tests
-#target_link_libraries(imgexptest gtest.lib gtest_main.lib imgexp.lib)
+#target_link_libraries(imgexptest libgtest.a libgtest_main.a libimgexp.a)
