changed how boost is referenced by cmake

--- a/expbuilder/CMakeLists.txt
+++ b/expbuilder/CMakeLists.txt
@@ -8,6 +8,7 @@ cmake_policy(SET CMP0020 NEW)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+find_package(Boost 1.55 REQUIRED)
 
 set(Qt5Widgets_DIR "$ENV{QTDIR}\\qtbase\\lib\\cmake\\Qt5Widgets")
 
@@ -15,7 +16,7 @@ find_package(Qt5Widgets 5.2 REQUIRED)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-include_directories(include)
+include_directories(include ${Boost_INCLUDE_DIR})
 
 qt5_wrap_ui(ui_headers ui/mainwindow.ui)
 
