--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,16 @@ project(imgexp CXX)
 
 add_definitions(-DJSON_IS_AMALGAMATION)
 
+find_package(Boost 1.55 REQUIRED)
+
 #uncomment to enable verbose compilation
 #add_definitions(-v)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-file(TO_CMAKE_PATH $ENV{BOOST_DIR} boost_dir)
 file(TO_CMAKE_PATH $ENV{JSONCPP_DIR} jsoncpp_dir)
 
-include_directories(include ${boost_dir} ${jsoncpp_dir})
+include_directories(include ${Boost_INCLUDE_DIR} ${jsoncpp_dir})
 
 set(jsoncpp_source ${jsoncpp_dir}/jsoncpp.cpp)
 
